ui changes done

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^10.8.0",
-    "cypress-v10-preserve-cookie": "^1.2.1"
+    "cypress-v10-preserve-cookie": "^1.2.1",
+    "cypress-wait-until": "^1.7.2"
   }
 }
